PyMaker/datas/object2/RawHTML/Python_DOC_referPages.im-trying-to-write-a-discord-bot-in-python-but-it-says-all-code-is-wrong.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/51196568/create-task-asyncio-async-syntaxerror-invalid-syntax">create_task = asyncio.async: SyntaxError: invalid syntax</a>
<span class="question-originals-answer-count">
                    2 answers
                </span>
</li>
</ul>
</div>
<p>I'm trying to write a discord bot in python but it says all code is wrong!</p>
<p>I have installed discord.py and I am using Python 3.5.</p>
<p>I do not understand why?</p>
<p><strong>My code:</strong> </p>
<pre><code>import discord
from discord.ext import commands

token = ("NTU2NDMzMTIE3NDE4NzYz.D25qlg.O9DZ3Z826EYluNydApWZ3RBjj2Q")

client = commands.Bot(command_prefix="*")

@client.event
async def on_ready():
    print("Bot is ready")

client.run(token)
</code></pre>
<p><strong>Error:</strong></p>
<pre><code>  Traceback (most recent call last):
  File "&lt;input&gt;", line 1, in &lt;module&gt;
  File "D:\PyCharm Community Edition 2018.3.1\helpers\pydev\_pydev_bundle\pydev_umd.py", line 198, in runfile
    pydev_imports.execfile(filename, global_vars, local_vars)  # execute the script
  File "D:\PyCharm Community Edition 2018.3.1\helpers\pydev\_pydev_imps\_pydev_execfile.py", line 18, in execfile
    exec(compile(contents+"\n", file, 'exec'), glob, loc)
  File "C:/Users/Kadir/PycharmProjects/untitled/Discord Bot Deniyoruz/Bot.py", line 1, in &lt;module&gt;
    import discord
  File "D:\PyCharm Community Edition 2018.3.1\helpers\pydev\_pydev_bundle\pydev_import_hook.py", line 21, in do_import
    module = self._system_import(name, *args, **kwargs)
  File "C:\Users\Kadir\PycharmProjects\untitled\venv\lib\site-packages\discord\__init__.py", line 20, in &lt;module&gt;
    from .client import Client, AppInfo, ChannelPermissions
  File "D:\PyCharm Community Edition 2018.3.1\helpers\pydev\_pydev_bundle\pydev_import_hook.py", line 21, in do_import
    module = self._system_import(name, *args, **kwargs)
  File "C:\Users\Kadir\PycharmProjects\untitled\venv\lib\site-packages\discord\client.py", line 38, in &lt;module&gt;
    from .state import ConnectionState
  File "D:\PyCharm Community Edition 2018.3.1\helpers\pydev\_pydev_bundle\pydev_import_hook.py", line 21, in do_import
    module = self._system_import(name, *args, **kwargs)
  File "C:\Users\Kadir\PycharmProjects\untitled\venv\lib\site-packages\discord\state.py", line 36, in &lt;module&gt;
    from . import utils, compat
  File "D:\PyCharm Community Edition 2018.3.1\helpers\pydev\_pydev_bundle\pydev_import_hook.py", line 21, in do_import
    module = self._system_import(name, *args, **kwargs)
  File "C:\Users\Kadir\PycharmProjects\untitled\venv\lib\site-packages\discord\compat.py", line 32
    create_task = asyncio.async
                              ^
SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>This is normal. async (and currently latest) version of discord.py doesn't support 3.7 or newer, as <code>async</code> becomes a <em>reserved</em> keyword. Consider switching to rewrite version (which supports 3.7) or downgrading Python version to 3.6 or lower.</p>
</div>
<span class="comment-copy">it says syntax error in <code>compat.py</code>. Double check the python version that is required, or update the discord package maybe?</span>
<span class="comment-copy">I'm using python 3.7.2 and installed dicord.py today</span>
<span class="comment-copy">Do not post your bot token publicly, even a modified/fake one. Consider regenerating it if it's the actual one.</span>
